# Voigt_2013

./: Makefile.am  Makefile.in  README
check_test/: in
src/: currents.c  data_out.c  exptable.c  input_para.c  mem.c  syspara.h  system.c  vGBd.c  val_constants.c
